syntax = "proto3";

option csharp_namespace = "GrpcServiceSampleS47";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  bool IsRequeird=2;
  repeated int32 age=3;
  map<int32,string> student=4;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  int32 lenght =2;
}
